feature: finish course api
