# src/app/Http/Resources/CourseResource.php
@@ -1,0 +1,29 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class CourseResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'id' => $this->id,
+            'name' => $this->name,
+            'start' => $this->start,
+            'description' => $this->description,
+            'teacher' => [
+                'id' => $this->teacher->id,
+                'name' => $this->teacher->name,
+                'email' => $this->teacher->email,
+            ]
+        ];
+    }
+}
